ligolang/tools/lsp/squirrel/test/contracts/bad/extra-line-marker.mligo
# 1 "aaaa" 1

#error Malformed contract
